--- a/LynxApp/LynxApp/View/Base.lproj/Main.storyboard
+++ b/LynxApp/LynxApp/View/Base.lproj/Main.storyboard
@@ -203,7 +203,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="zVV-ia-fkx">
-                                <rect key="frame" x="30" y="194.99999999999997" width="354" height="285.33333333333326"/>
+                                <rect key="frame" x="30" y="195" width="354" height="391"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eye" translatesAutoresizingMaskIntoConstraints="NO" id="WPD-0f-V0X">
                                         <rect key="frame" x="127" y="0.0" width="100" height="50"/>
@@ -213,7 +213,7 @@
                                         </constraints>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="EcU-Jm-djg">
-                                        <rect key="frame" x="0.0" y="50.000000000000014" width="354" height="235.33333333333337"/>
+                                        <rect key="frame" x="0.0" y="50" width="354" height="341"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="foresight-white" translatesAutoresizingMaskIntoConstraints="NO" id="c79-6x-xkf">
                                                 <rect key="frame" x="27" y="0.0" width="300" height="200"/>
@@ -223,10 +223,10 @@
                                                 </constraints>
                                             </imageView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="EGR-hO-yOP">
-                                                <rect key="frame" x="0.0" y="200" width="354" height="35.333333333333343"/>
+                                                <rect key="frame" x="0.0" y="200" width="354" height="141"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Crowdsourcing perspectives on global matters" textAlignment="center" lineBreakMode="characterWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kla-ax-jH3">
-                                                        <rect key="frame" x="0.0" y="0.0" width="354" height="15.666666666666666"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="354" height="20"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="20" id="DGs-Z4-9W8"/>
                                                             <constraint firstAttribute="width" constant="354" id="RVd-q2-Cxj"/>
@@ -236,7 +236,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe left to learn more" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7eu-Mr-oeA">
-                                                        <rect key="frame" x="94.333333333333329" y="15.666666666666631" width="165.33333333333337" height="19.666666666666671"/>
+                                                        <rect key="frame" x="94.333333333333329" y="20" width="165.33333333333337" height="121"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="20" id="8fn-0y-8Oe"/>
                                                         </constraints>
@@ -277,7 +277,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="aH4-om-gTh">
-                                <rect key="frame" x="30" y="194.99999999999997" width="354" height="285.33333333333326"/>
+                                <rect key="frame" x="30" y="195" width="354" height="391"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eye" translatesAutoresizingMaskIntoConstraints="NO" id="y3E-Ym-312">
                                         <rect key="frame" x="127" y="0.0" width="100" height="50"/>
@@ -287,7 +287,7 @@
                                         </constraints>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="sQi-N1-niJ">
-                                        <rect key="frame" x="0.0" y="50.000000000000014" width="354" height="235.33333333333337"/>
+                                        <rect key="frame" x="0.0" y="50" width="354" height="341"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="foresight-white" translatesAutoresizingMaskIntoConstraints="NO" id="cgZ-Jz-gUm">
                                                 <rect key="frame" x="27" y="0.0" width="300" height="200"/>
@@ -297,10 +297,10 @@
                                                 </constraints>
                                             </imageView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="EJF-eU-w1H">
-                                                <rect key="frame" x="0.0" y="200" width="354" height="35.333333333333343"/>
+                                                <rect key="frame" x="0.0" y="200" width="354" height="141"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Crowdsourcing perspectives on global matters" textAlignment="center" lineBreakMode="characterWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zeK-rV-uYY">
-                                                        <rect key="frame" x="0.0" y="0.0" width="354" height="15.666666666666666"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="354" height="20"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="354" id="8zy-qp-LJb"/>
                                                             <constraint firstAttribute="height" constant="20" id="gkr-HQ-H97"/>
@@ -310,7 +310,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe left to learn more" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G4c-aV-IaO">
-                                                        <rect key="frame" x="94.333333333333329" y="15.666666666666629" width="165.33333333333337" height="19.666666666666671"/>
+                                                        <rect key="frame" x="94.333333333333329" y="20" width="165.33333333333337" height="121"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="20" id="KuC-Bw-JGH"/>
                                                         </constraints>
